...
                groups.forEach { group ->
                    Card(
                        onClick = { onGroupClick(group.joinCode) },
                        modifier =
                            Modifier
                                .fillMaxWidth()
                                .testTag("groupButton"),
                        colors =
                            CardDefaults.cardColors(
                                containerColor = MaterialTheme.colorScheme.primaryContainer,
                                contentColor = MaterialTheme.colorScheme.onPrimaryContainer,
                            ),
                        elevation =
...
